added test markdown page

--- a/src/components/space.css
+++ b/src/components/space.css
@@ -17,11 +17,11 @@ li {
 
 b, strong {
   font-family: "sans serif";
-  font-weight: 700;
+  font-weight: 500;
   font-size: 100%;
-  padding:0px 10px 0px 10px;
-  color: #222222;
-  background-color: #eeeeee;
+  padding:0px 5px 0px 3px;
+  color: #333333;
+  background-color: #cccccc;
 }
 
 h6.code {
