--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -15,6 +15,17 @@ h1, h2 {
   margin-top: 50px;
 }
 
+header {
+  background-color: #3e3e3e;
+}
+
+/* footer */
+footer {
+  display: block;
+  margin-top: 30px;
+  text-align: center;
+}
+
 /* list itmes */
 li {
   font-family: serif;
@@ -60,6 +71,7 @@ pre, blockquote {
 a {
   /* color: #7269f3; */
   color : #111;
+  text-decoration: none;
 }
 
 /* images, table and embed iframes are default centered */
@@ -123,7 +135,7 @@ img[alt="90"] {
 
 input:focus {
   padding: 10px;
-  border: 2px solid #7269f3;
+  border: 2px solid #cccccc;
   background-color: #dddddd;
   outline: none;
   border-radius: 5px;
