--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -22,7 +22,7 @@ header {
 /* footer */
 footer {
   display: block;
-  margin-top: 30px;
+  margin-top: 0px;
   text-align: center;
 }
 
@@ -122,21 +122,21 @@ img[alt="90"] {
 .filterBox {
   background-image: url(/icons/search.svg);
   background-repeat: no-repeat;
-  background-color: rgb(185, 185, 185);
+  background-color: rgb(221, 221, 221);
   text-indent: 1.3em;
   float: right;
   outline: none;
   border: 1px solid #cccccc;
   border-radius: 5px;
-  transition: 0.3s all;
+  transition: 0.2s all;
   color:#555;
   padding: 3px;
 }
 
 input:focus {
   padding: 10px;
-  border: 2px solid #cccccc;
-  background-color: #dddddd;
+  border: 1px solid #cccccc;
+  background-color: #ffffff;
   outline: none;
   border-radius: 5px;
   box-shadow: none;
