--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -99,6 +99,15 @@ img[alt=right] {
 }
 
 /* manual img resize by alt */
+img[alt="10"] {
+  width: 10%;
+}
+img[alt="20"] {
+  width: 20%;
+}
+img[alt="30"] {
+  width: 30%;
+}
 img[alt="40"] {
   width: 40%;
 }
