--- a/src/custom.css
+++ b/src/custom.css
@@ -45,9 +45,12 @@ b, strong {
 
 /* tags */
 h6 code, :not(pre) > code[class*="language-"] {
-  font-family: 'Playfair Display', 'serif';
+  font-family: 'serif';
+  font-weight: 400;
   color: #333333;
-  background-color: #e7e7e7;
+  background-color: #eaeaea;
+  padding-left: 5px;
+  padding-right: 5px;
   margin-left: 5px;
   margin-right: 5px;
 } 
@@ -61,6 +64,7 @@ pre, blockquote {
   font-style: normal;
   font-size: 1.0em;
   border-radius: 10px;
+  white-space: pre-wrap;
 }
 
 /* LaTeX font */
@@ -99,7 +103,7 @@ img[alt=right] {
   font-style: italic;
 }
 
-/* manual img resize by alt */
+/* Manually img resize by alt */
 img[alt="10"] {
   width: 10%;
 }
@@ -129,6 +133,7 @@ img[alt="90"] {
 }
 
 /* Filter Box */
+
 .filterBox {
   background-image: url(./images/search-24px.svg);
   background-repeat: no-repeat;
@@ -153,6 +158,8 @@ input:focus {
   color: #111;
 }
 
+/* Custom Container Styles */
+
 info p,
 warning p,
 success p
@@ -162,18 +169,18 @@ success p
 }
 
 info,
-warning
+warning,
+info > div > span.katex-display
 {
   padding: 15px;
   border-radius: 5px;
 }
 
-
 success p {
   background: rgb(74, 209, 62);
 }
 
-info p
+info p, info > div > span.katex-display
 {
   background: skyblue;
 }
@@ -181,4 +188,33 @@ info p
 warning p
 {
   background: rgb(223, 117, 117);
+}
+
+/**
+ * Add back the container background-color, border-radius, padding, margin
+ * and overflow that we removed from <pre>.
+ */
+ .gatsby-highlight {
+  background-color: #2c2c2b;
+  border-radius: 0.5em;
+  margin: 0.5em 0;
+  padding: 1em;
+  overflow: auto;
+}
+
+/**
+ * Remove the default PrismJS theme background-color, border-radius, margin,
+ * padding and overflow.
+ * 1. Make the element just wide enough to fit its content.
+ * 2. Always fill the visible space in .gatsby-highlight.
+ * 3. Adjust the position of the line numbers
+ */
+.gatsby-highlight code[class*="language-"], pre[class*="language-"] {
+  white-space: pre-wrap;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  overflow: initial;
+  float: left; /* 1 */
+  min-width: 100%; /* 2 */
 }
