--- a/src/custom.css
+++ b/src/custom.css
@@ -89,6 +89,21 @@ table, img, iframe, .geogebra {
   margin-bottom: 10px;
 }
 
+/* <kbd> */
+kbd {
+  background-color: #eee;
+  border-radius: 3px;
+  border: 1px solid #b4b4b4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+  color: #333;
+  display: inline-block;
+  font-size: .85em;
+  font-weight: 700;
+  line-height: 1;
+  padding: 2px 4px;
+  white-space: nowrap;
+}
+
 /* manual alignments right of image/icon/text caption */
 img[alt=right] {  
   float: right;
