--- a/src/custom.css
+++ b/src/custom.css
@@ -1,3 +1,6 @@
+html {
+  line-height: 1.7em;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -45,7 +48,7 @@ b, strong {
   /* font-size: 100%; */
   padding:0px 5px 0px 3px;
   color: #333333;
-  background-color: #dddddd;
+  background-color: #eeeeee;
 }
 
 /* tags */
