--- a/src/custom.css
+++ b/src/custom.css
@@ -48,7 +48,7 @@ b, strong {
   /* font-size: 100%; */
   padding:0px 5px 0px 3px;
   color: #333333;
-  background-color: #eeeeee;
+  background-color: rgba(27,31,35,.05);
 }
 
 /* tags */
@@ -56,7 +56,7 @@ h6 code, :not(pre) > code[class*="language-"] {
   font-family: monospace;
   font-weight: 400;
   color: #333333;
-  background-color: #eaeaea;
+  background-color: rgba(27,31,35,.05);
   padding-left: 5px;
   padding-right: 5px;
   margin-left: 5px;
